# splr

./: .envrc  .gitignore  Cargo.toml  ChangeLog.md  Changelog.md  Glucose-SimpSolver.cc  Glucose-core.cc  Glucose-simp.cc  README.md  Solver.cc  flake.nix  uf100-011.cnf  uf200-020.cnf  uf250-050.cnf  uf8.cnf
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
.gitlab/issue_templates/: Investigation.md
.zed/: debug.json
cnfs/: README.md  issue-182.cnf  uf200-074.cnf  uf250-02.cnf  uf75-01.cnf  unif-k3-r4.25-v360-c1530-S1028159446-096.cnf
misc/: algorithm.tex  algorithm.typst  search.tex  splr-all.rs
splr-cnf/: Cargo.toml
splr-cnf/src/: cnf.rs  lib.rs
splr-ema/: Cargo.toml
splr-ema/src/: lib.rs
splr-luby/: Cargo.toml
splr-luby/src/: lib.rs
src/: analyze.rs  assign.rs  assigner.rs  clause.rs  clause_manage.rs  clause_select.rs  config.rs  config_no_io.rs  criteria.rs  eliminate.rs  eliminator.rs  lib.rs  macros.rs  main.rs  profiler.rs  propagate.rs  propagator.rs  restart.rs  restarter.rs  search.rs  search_restart.rs  solver.rs  solver_analyze.rs  solver_propagate.rs  solver_restart.rs  solver_rollback.rs  state.rs  traits.rs  types-old.rs  types.rs  validate.rs  validator.rs  vam.rs  var.rs  var_manage.rs  var_select.rs  var_vector.rs  watch.rs
src/assign/: activity.rs  bi_reward.rs  ema.rs  evsids.rs  heap.rs  learning_rate.rs  mod.rs  progress.rs  propagate.rs  rephase.rs  reward.rs  sandbox.rs  select.rs  stack.rs  stats.rs  trail_saving.rs  used_order.rs  var.rs
src/cdb/: activity.rs  binary.rs  ci.rs  cid.rs  clause.rs  clause_vector.rs  cref.rs  db.rs  dlink.rs  ema.rs  lbd.rs  mod.rs  slink.rs  sls.rs  stats.rs  unsat_certificate.rs  vivify.rs  watch.rs  watch_cache.rs  weaver.rs
src/cnf/: cnf.rs  mod.rs
src/primitive/: ema.rs  luby.rs  mod.rs
src/processor/: eliminate.rs  eliminator.rs  heap.rs  mod.rs  simplify.rs  subsume.rs
src/solver/: analyze.rs  build.rs  conflict.rs  mod.rs  propagate.rs  restart.rs  search.rs  stage.rs  state.rs  validate.rs  vivify.rs
src/types/: bsvr.rs  cid.rs  clause.rs  cnf.rs  ema.rs  flags.rs  histogram.rs  idx.rs  lit.rs  literal.rs  luby.rs  mod.rs  ordered_proxy.rs  var.rs
src/var_activity/: evsids.rs  heap.rs  learning_rate.rs  mod.rs  select.rs
tests/: a_rphp035_05.cnf  clause.rs  eliminator.rs  isat.rs  isat2.rs  sample.cnf  test_clause.rs  test_eliminator.rs  test_ema.rs  test_var.rs  uf100-010.cnf  verify-certificates.rs  verify-certificates.sh
