[package]
name = "splr"
version = "0.19.0-rc2"
authors = ["Narazaki Shuji <shujinarazaki@protonmail.com>"]
description = "A modern CDCL SAT solver in Rust"
edition = "2024"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/shnarazk/splr"
homepage = "https://github.com/shnarazk/splr"
keywords = ["SAT", "SAT-solver", "logic", "satisfiability"]
categories = ["science", "mathematics"]
default-run = "splr"
rust-version = "1.94"

[dependencies]
bitflags = "^2.8"
instant = { version = "0.1", features = ["wasm-bindgen"], optional = true }

[features]
default = [
    ### Essential
    "unsafe_access",
    # "chrono_BT",
    "trail_saving",
    "BT_deepen",

    ### Heuristics
    # "bi_clause_completion",
    # "clause_rewarding",
    "LRB_rewarding",
    "reason_side_rewarding",
    "rephase",
    # "stochastic_local_search",
    # "suppress_reason_chain",

    ### Logic formula processor
    "clause_elimination",
    "clause_vivification",

    ### For DEBUG
    # "boundary_check",

    ### platform dependency
    # "platform_wasm"
]
assign_rate = []                # for debug and study
best_phases_tracking = []       # save the best-so-far assignment, used by 'rephase'
bi_clause_completion = []       # this will increase memory pressure
boundary_check = []             # for debug
BT_deepen = []                   # backtrack drift
chrono_BT = []                  # NOT WORK
clause_elimination = []         # pre(in)-processor setting
clause_rewarding = []           # clauses have activities w/ decay rate
clause_vivification = []        # pre(in)-processor setting
debug_propagation = []          # for debug
EMA_calibration = []            # each exponential moving average has a calbration value
EVSIDS = []                     # Exponential Variable State Independent Decaying Sum
just_used = []                  # Var and clause have 'just_used' flags
LRB_rewarding = []              # Learning Rate Based rewarding, a new var activity criteria
no_IO = []                      # to embed Splr into non-std environments
platform_wasm = [
    "instant",                  # use instant::Duration instead of std::time::Duration
]
reason_side_rewarding = []      # an idea used in Learning-rate based rewarding
rephase = [                     # search around the best-so-far candidate repeatedly
    "best_phases_tracking",
]
stochastic_local_search = [     # since 0.17
    "rephase",
]
support_user_assumption = []    # NOT WORK (defined in Glucose)
suppress_reason_chain = []      # make direct links between a dicision var and its implications
trace_analysis = []             # for debug
trace_elimination = []          # for debug
trail_saving = []               # reduce propagation cost by reusing propagation chain
unsafe_access = []              # access elements of vectors without boundary checking

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
