[package]
name = "splr"
version = "0.19.0-rc3"
authors = ["Narazaki Shuji <shujinarazaki@protonmail.com>"]
description = "A modern CDCL SAT solver in Rust"
edition = "2024"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/shnarazk/splr"
homepage = "https://github.com/shnarazk/splr"
keywords = ["SAT", "SAT-solver", "logic", "satisfiability"]
categories = ["science", "mathematics"]
default-run = "splr"
rust-version = "1.94"

[dependencies]
bitflags = "^2.8"
cpu-time = "1.0"
instant = { version = "0.1", features = ["wasm-bindgen"], optional = true }

[features]
default = [
    ### Essential
    # "chrono_BT",
    "trail_saving",
    "BT_deepen",

    ### Heuristics

    # "clause_rewarding",
    # "reason_side_rewarding",
    # "rephase",
    # "stochastic_local_search",

    ### Logic formula processor
    "clause_elimination",
    "clause_vivification",

    ### platform dependency
    # "platform_wasm"
]

best_phases_tracking = []       # save the best-so-far assignment, used by 'rephase'

BT_deepen = []                   # backtrack drift
chrono_BT = []                  # NOT WORK
clause_elimination = []         # pre(in)-processor setting
clause_rewarding = []           # clauses have activities w/ decay rate
clause_vivification = []        # pre(in)-processor setting
EMA_calibration = []            # each exponential moving average has a calbration value
no_IO = []                      # to embed Splr into non-std environments
platform_wasm = [
    "instant",                  # use instant::Duration instead of std::time::Duration
]
reason_side_rewarding = []      # an idea used in Learning-rate based rewarding
rephase = [                     # search around the best-so-far candidate repeatedly
    "best_phases_tracking",
]
stochastic_local_search = [     # since 0.17
    "rephase",
]

trace_analysis = []             # for debug
trace_elimination = []          # for debug
trace_propagation = []          # for debug
trail_saving = []               # reduce propagation cost by reusing propagation chain

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
